       The program is called TortoiseMerge.
       (Stefan)
- ADD: New command to create patchfiles in
       unified diff format from a modified
       working copy. (Stefan)
- ADD: New command to apply patchfiles in
       unified diff format to a working
       copy. (Stefan)
- ADD: New checkbox to select/deselect all entries
       in the commit dialog. (Stefan)
- CHG: The settings dialog got a facelift. (Stefan)
- CHG: The layout in our installation folder
       is more organized. (Stefan)
- CHG: The about box got a facelift: it finally
       has the correct TSVN logo in it. (Stefan)
- CHG: Don't show an error if a temporary file
       can't get deleted because of a stupid
       virus scanner. (Stefan)
- BUG: Convert the Subversion error messages
       properly from UTF8 to UNICODE/MBCS. (Stefan)
       
Version 0.23
- ADD: Most dialogs now have the "F1"-help
       working. (Stefan)
- ADD: The commit dialog now shows a busy cursor
       while the status of the working copy files
       is checked. (Stefan)
- BUG: The property page and the repo browser showed
       some garbage characters instead of clean
       Unicode chars. (Stefan)
- BUG: Folders with a "d" at the beginning could
       be shown wrong in the repository browser. (Stefan)
- BUG: In the property page the properties were
       not set to the selected value in the
       list-control. (Stefan)
- BUG: Fixed a registry handle leak in the shell
       extension. (Stefan)
       
Version 0.22
- ADD: A lot of improved icons. (Luebbe)
- ADD: Hint text for the setting "don't remove
       log messages when cancelling a commit". (Stefan)
- ADD: The "Add before commit" option allows now
       to add whole unversioned folders to be
       added before a commit. (Stefan)
- ADD: The commit dialog has a context menu from
       where its possible to revert changes
       in listed files. (Stefan)
- ADD: Doubleclicking on a locally modified entry
       in the "Check For Updates" dialog opens